fixed shrinking of nav menu on iphones

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ a {
   padding: 20px 30px 0;
   box-sizing: border-box;
   justify-content: space-between;
+  flex-shrink: 0;
 }
 
 .header__logo {
@@ -40,7 +41,6 @@ a {
 }
 
 .header__nav {
-  flex-shrink: 0;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
@@ -77,7 +77,7 @@ a {
   -moz-font-smoothing: greyscale;
   font-family: "SuiesseInt";
   font-size: 24px;
-  /* flex: 1; */
+  flex-shrink: 0;
 }
 
 .content {
